# ElGamal

./: .gitignore  ElGamal.cabal  README.md  package.yaml  stack.yaml
app/: Main.hs
bench/: Benchmarks.hs
src/: Components.hs  ECElGamal.hs  ElGamal.hs  ElGamalComponents.hs  ShamirSecretSharing.hs  ThresholdElGamal.hs  ZKP.hs
test/: ECElGamalSpec.hs  ElGamalSpec.hs  ElGamalTest.hs  Spec.hs  ZKPSpec.hs  ZKPTest.hs
