name:                ElGamal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ElGamal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ElGamal
                    ,  ZKP
                    ,  ElGamalComponents
                    ,  ShamirSecretSharing
                    ,  ThresholdElGamal

  build-depends:       base >= 4.7 && < 5
                    ,  cryptonite
                    ,  transformers
                    ,  split
                    ,  MonadRandom
                    ,  QuickCheck
                    ,  bytestring
  default-language:    Haskell2010

executable ElGamal-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ElGamal
  default-language:    Haskell2010

test-suite ElGamal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                    ,  src
  other-modules:       ElGamalTest
                    ,  ElGamalComponents
                    ,  ElGamal
                    ,  ZKP
                    ,  ShamirSecretSharing
                    ,  ThresholdElGamal
                    ,  ZKPTest
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , cryptonite
                     , split
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ElGamal
